# BeagleBone-prototyp1

./: CMakeLists.txt  README.md  main.cpp  main.cxx
BaseStation/: Serial.h  main.cpp
BeagleBone/: readme.txt
BeagleBone/galileo/hello-world/: CMakeLists.txt  main.cpp
docs/: .gitignore  Makefile  design.dot
src/: main.cxx  vuart.cxx  vuart.hxx
